@@ -1,6 +1,8 @@
 ext3grep-0.4.2
 
         Force recompile if CXXFLAGS changes.
+	Don't print any non-ASCII characters.
+	Treat any non-ASCII character as 'weird' in filenames, thus also values larger than 127.
 
 ext3grep-0.4.1
 
